B&L QA/objects/Pipeline_Verification__c.object
<CustomObject>
    <description>This object is used by sales leaders who manage SES reps to verify that they have reviewed the global equipment pipeline for each SES who report to them.</description>
    <fields>
        <fullName>Date_Verified__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date that the Pipeline Verification was done.</description>
        <inlineHelpText>Enter the date that Pipeline Verification was completed.</inlineHelpText>
        <label>Date Verified</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Pipeline_has_been_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box if the equipment pipeline has been verified on the respective date.</description>
        <inlineHelpText>Check the box if the equipment pipeline has been verified on the respective date.</inlineHelpText>
        <label>Equipment Pipeline has been verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pipeline_Verifcation_Notes__c</fullName>
        <description>Notes regarding pipeline verification.</description>
        <inlineHelpText>Enter any additional notes about the pipeline verification</inlineHelpText>
        <label>Pipeline Verifcation Notes</label>
        <type>TextArea</type>
    </fields>
    <label>Pipeline Verification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Equipment_Pipeline_has_been_verified__c</columns>
        <columns>Date_Verified__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Pipeline_Verifications</fullName>
        <columns>NAME</columns>
        <columns>Equipment_Pipeline_has_been_verified__c</columns>
        <columns>Date_Verified__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Pipeline Verifications</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Pipeline Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>